syntax = "proto3";

package go.micro.service.offer;

service Offer {
	rpc SetOffer(OfferRequest) returns (Response){}
	rpc GetOffer(OfferRequest)returns (Response){}
}

message OfferRequest{
	string name = 1;
	string url = 2;
	string postBackUrl = 3;
	string id = 4;

}
message Message {
	string say = 1;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}


